merge game session models into ApiModels and align GameController with Java 8 safe request handling